Gyroscope sending data to socket

--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,7 @@
     <div id="alpha"></div>
     <div id="beta"></div>
     <div id="gamma"></div>
+    <script type="text/javascript" src="/assets/js/socket.io.js"></script>
     <script type="text/javascript" src="/assets/js/gyrosocket.js"></script>
   </body>
 </html>
