--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,16 @@
     <div id="beta"></div>
     <div id="gamma"></div>
     <script type="text/javascript" src="/assets/js/socket.io.js"></script>
-    <script type="text/javascript" src="/assets/js/gyrosocket.js"></script>
+    <script>
+
+      var socket = io.connect('/gyrosocket');
+      socket.on('value', function(data) {
+        document.getElementById("alpha").innerHTML = "alpha: " + data.alpha;
+        document.getElementById("beta").innerHTML = "beta: " + data.beta;
+        document.getElementById("gamma").innerHTML = "gamma: " + data.gamma;
+        console.log(data);
+      });
+
+    </script>
   </body>
 </html>
