--- a/static/index.html
+++ b/static/index.html
@@ -11,8 +11,8 @@
     <div id="alpha"></div>
     <div id="beta"></div>
     <div id="gamma"></div>
-    <script type="text/javascript" src="/assets/js/socket.io.js"></script>
-    <script type="text/javascript" src="/assets/js/gyrosocket.js"></script>
+    <script type="text/javascript" src="/socket.io.js"></script>
+    <script type="text/javascript" src="/gyrosocket.js"></script>
     <script>
 
       var DEBUG = true;
@@ -30,7 +30,7 @@
         onchange: gyroSocketOnChange,
         debug: DEBUG
       }).receive();
-      
+
     </script>
   </body>
 </html>
