--- a/static/index.html
+++ b/static/index.html
@@ -6,21 +6,76 @@
 		<meta name="apple-touch-fullscreen" content="yes" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <style>
+      body {
+        margin:0px;
+        padding:0px;
+        border:0px;
+        font: 12px/16px Monospace;
+        background: #fefefe;
+      }
+
+      #stats {
+        position: absolute;
+        top:0px;
+        left:0px;
+        color:white;
+        padding:10px;
+      }
+      #stats div { white-space: pre; }
+
+    </style>
+
   </head>
   <body>
-    <div id="alpha"></div>
-    <div id="beta"></div>
-    <div id="gamma"></div>
+    <div id="stats">
+      <div id="alpha"></div>
+      <div id="beta"></div>
+      <div id="gamma"></div>
+    </div>
     <script type="text/javascript" src="/socket.io.js"></script>
     <script type="text/javascript" src="/gyrosocket.js"></script>
+    <script type="text/javascript" src="/three.js"></script>
     <script>
 
+      var scene, camera, renderer;
+
       var DEBUG = true;
+      var WIDTH  = window.innerWidth;
+      var HEIGHT = window.innerHeight;
+      var SPEED = 0.01;
+
+      function init(){
+        scene = new THREE.Scene();
+
+        camera = new THREE.PerspectiveCamera(50, WIDTH / HEIGHT, 1, 10);
+        camera.position.set(0, 3.5, 5);
+        camera.lookAt(scene.position);
+
+        renderer = new THREE.WebGLRenderer({ antialias: true });
+        renderer.setSize(WIDTH, HEIGHT);
+
+        cube = new THREE.Mesh(new THREE.CubeGeometry(2, 2, 2), new THREE.MeshNormalMaterial());
+        scene.add(cube);
+
+        document.body.appendChild(renderer.domElement);
+
+        renderer.render(scene, camera);
+      }
 
       function gyroSocketOnChange(value) {
-        document.getElementById("alpha").innerHTML = "alpha: " + value.alpha;
-        document.getElementById("beta").innerHTML = "beta: " + value.beta;
-        document.getElementById("gamma").innerHTML = "gamma: " + value.gamma;
+
+        // Display status info
+        document.getElementById("alpha").innerHTML = "alpha : " + value.alpha;
+        document.getElementById("beta").innerHTML  = "beta  : " + value.beta;
+        document.getElementById("gamma").innerHTML = "gamma : " + value.gamma;
+
+        // Rotate cube
+        cube.rotation.y = value.alpha * (Math.PI/180);
+        cube.rotation.x = value.beta  * (Math.PI/180);
+        cube.rotation.z = (value.gamma * -1) * (Math.PI/180);
+        renderer.render(scene, camera);
+
         if(DEBUG) console.log(value);
       }
 
@@ -31,6 +86,7 @@
         debug: DEBUG
       }).receive();
 
+      init();
     </script>
   </body>
 </html>
